syntax = "proto3";

package payments;

option go_package = "github.com/Babushkin05/software-dev-course/kr3/api-gateway/api/gen/paymentspb";

import "google/api/annotations.proto";

service PaymentsService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/payments/account"
      body: "*"
    };
  }

  rpc Deposit(DepositRequest) returns (BalanceResponse) {
    option (google.api.http) = {
      post: "/v1/payments/deposit"
      body: "*"
    };
  }

  rpc GetBalance(GetBalanceRequest) returns (BalanceResponse) {
    option (google.api.http) = {
      get: "/v1/payments/{user_id}/balance"
    };
  }

  rpc Withdraw(WithdrawRequest) returns (BalanceResponse) {
    option (google.api.http) = {
      post: "/v1/payments/withdraw"
      body: "*"
    };
  }
}

message CreateAccountRequest {
  string user_id = 1;
}

message CreateAccountResponse {
  string account_id = 1;
}

message DepositRequest {
  string user_id = 1;
  int64 amount = 2;
}

message GetBalanceRequest {
  string user_id = 1;
}

message WithdrawRequest {
  string user_id = 1;
  int64 amount = 2;
}

message BalanceResponse {
  int64 balance = 1;
}
